internal/gatewayapi/testdata/backend-tls-settings-dedup.out.yaml
backendTLSPolicies:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: BackendTLSPolicy
  metadata:
    name: policy-btls-for-backend-1
    namespace: default
  spec:
    targetRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: backend-1
    validation:
      hostname: example.com
      subjectAltNames:
      - type: URI
        uri: spiffe://cluster.local/ns/istio-demo/sa/echo-v1
      - hostname: subdomain.secondexample.com
        type: Hostname
      wellKnownCACertificates: System
  status:
    ancestors:
    - ancestorRef:
        name: gateway-1
        namespace: envoy-gateway
      conditions:
      - lastTransitionTime: null
        message: Resolved all the Object references.
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: BackendTLSPolicy
  metadata:
    name: policy-btls-for-backend-3
    namespace: default
  spec:
    targetRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: backend-3
    validation:
      hostname: example.com
      wellKnownCACertificates: System
  status:
    ancestors:
    - ancestorRef:
        name: gateway-1
        namespace: envoy-gateway
      conditions:
      - lastTransitionTime: null
        message: Resolved all the Object references.
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: BackendTLSPolicy
  metadata:
    name: policy-btls-for-backend-4
    namespace: default
  spec:
    targetRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: backend-4
      sectionName: "3001"
    validation:
      hostname: example.com
      wellKnownCACertificates: System
  status:
    ancestors:
    - ancestorRef:
        name: gateway-1
        namespace: envoy-gateway
      conditions:
      - lastTransitionTime: null
        message: Resolved all the Object references.
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: BackendTLSPolicy
  metadata:
    name: policy-btls-for-backend-6
    namespace: default
  spec:
    targetRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: backend-6
      sectionName: "3002"
    validation:
      hostname: example.com
      wellKnownCACertificates: System
  status:
    ancestors: null
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: BackendTLSPolicy
  metadata:
    name: policy-btls-for-backend-8
    namespace: envoy-gateway
  spec:
    targetRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: backend-8
    validation:
      hostname: example.com
      subjectAltNames:
      - type: URI
        uri: spiffe://cluster.local/ns/istio-demo/sa/echo-v1
      - hostname: subdomain.secondexample.com
        type: Hostname
      wellKnownCACertificates: System
  status:
    ancestors:
    - ancestorRef:
        name: gateway-2-with-backend-tls
        namespace: envoy-gateway
      conditions:
      - lastTransitionTime: null
        message: Resolved all the Object references.
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
backends:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: Backend
  metadata:
    name: backend-1
    namespace: default
  spec:
    endpoints:
    - ip:
        address: 1.1.1.1
        port: 3001
    tls:
      caCertificateRefs:
      - group: ""
        kind: ConfigMap
        name: ca-cmap
  status:
    conditions:
    - lastTransitionTime: null
      message: The Backend was accepted
      reason: Accepted
      status: "True"
      type: Accepted
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: Backend
  metadata:
    name: backend-2
    namespace: default
  spec:
    endpoints:
    - ip:
        address: 2.2.2.2
        port: 3001
    tls:
      caCertificateRefs:
      - group: ""
        kind: ConfigMap
        name: ca-cmap
      maxVersion: tls1.2
  status:
    conditions:
    - lastTransitionTime: null
      message: The Backend was accepted
      reason: Accepted
      status: "True"
      type: Accepted
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: Backend
  metadata:
    name: backend-3
    namespace: default
  spec:
    endpoints:
    - ip:
        address: 3.3.3.3
        port: 3001
    tls:
      insecureSkipVerify: false
  status:
    conditions:
    - lastTransitionTime: null
      message: The Backend was accepted
      reason: Accepted
      status: "True"
      type: Accepted
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: Backend
  metadata:
    name: backend-4
    namespace: default
  spec:
    endpoints:
    - ip:
        address: 3.3.3.3
        port: 3001
    tls:
      insecureSkipVerify: false
  status:
    conditions:
    - lastTransitionTime: null
      message: The Backend was accepted
      reason: Accepted
      status: "True"
      type: Accepted
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: Backend
  metadata:
    name: backend-5
    namespace: default
  spec:
    endpoints:
    - ip:
        address: 3.3.3.3
        port: 3001
    tls: {}
  status:
    conditions:
    - lastTransitionTime: null
      message: 'The Backend was not accepted: must specify either CACertificateRefs
        or WellKnownCACertificates when InsecureSkipVerify is unset or false'
      reason: Accepted
      status: "False"
      type: Invalid
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: Backend
  metadata:
    name: backend-6
    namespace: default
  spec:
    endpoints:
    - ip:
        address: 3.3.3.3
        port: 3001
    tls: {}
  status:
    conditions:
    - lastTransitionTime: null
      message: 'The Backend was not accepted: must specify either CACertificateRefs
        or WellKnownCACertificates when InsecureSkipVerify is unset or false'
      reason: Accepted
      status: "False"
      type: Invalid
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: Backend
  metadata:
    name: backend-7
    namespace: envoy-gateway
  spec:
    endpoints:
    - ip:
        address: 3.3.3.3
        port: 3001
    tls:
      alpnProtocols:
      - HTTP/2
      clientCertificateRef:
        group: ""
        kind: Secret
        name: client-auth-override
      wellKnownCACertificates: System
  status:
    conditions:
    - lastTransitionTime: null
      message: The Backend was accepted
      reason: Accepted
      status: "True"
      type: Accepted
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: Backend
  metadata:
    name: backend-8
    namespace: envoy-gateway
  spec:
    endpoints:
    - ip:
        address: 3.3.3.3
        port: 3001
  status:
    conditions:
    - lastTransitionTime: null
      message: The Backend was accepted
      reason: Accepted
      status: "True"
      type: Accepted
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: Backend
  metadata:
    name: backend-9
    namespace: envoy-gateway
  spec:
    endpoints:
    - ip:
        address: 3.3.3.3
        port: 3001
    tls:
      clientCertificateRef:
        group: ""
        kind: Secret
        name: client-auth-override
      wellKnownCACertificates: System
  status:
    conditions:
    - lastTransitionTime: null
      message: The Backend was accepted
      reason: Accepted
      status: "True"
      type: Accepted
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: Backend
  metadata:
    name: backend-10
    namespace: envoy-gateway
  spec:
    endpoints:
    - ip:
        address: 3.3.3.3
        port: 3001
    tls:
      wellKnownCACertificates: System
  status:
    conditions:
    - lastTransitionTime: null
      message: The Backend was accepted
      reason: Accepted
      status: "True"
      type: Accepted
envoyProxiesForGateways:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyProxy
  metadata:
    name: no-backend-tls
    namespace: envoy-gateway
  spec:
    logging: {}
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-3-without-backend-tls
        namespace: envoy-gateway
      conditions:
      - lastTransitionTime: null
        message: EnvoyProxy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 8
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-2-with-backend-tls
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
    tls:
      backend:
        clientCertificateRef:
          group: ""
          kind: Secret
          name: gateway-client-auth
  status:
    conditions:
    - lastTransitionTime: null
      message: Successfully resolved all TLS references for the gateway
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-3-without-backend-tls
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    infrastructure:
      parametersRef:
        group: gateway.envoyproxy.io
        kind: EnvoyProxy
        name: no-backend-tls
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-1
    namespace: default
  spec:
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
    rules:
    - backendRefs:
      - group: gateway.envoyproxy.io
        kind: Backend
        name: backend-1
      matches:
      - path:
          value: /
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-2
    namespace: default
  spec:
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
    rules:
    - backendRefs:
      - group: gateway.envoyproxy.io
        kind: Backend
        name: backend-2
      matches:
      - path:
          value: /
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-3
    namespace: default
  spec:
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
    rules:
    - backendRefs:
      - group: gateway.envoyproxy.io
        kind: Backend
        name: backend-3
      matches:
      - path:
          value: /
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-4
    namespace: default
  spec:
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
    rules:
    - backendRefs:
      - group: gateway.envoyproxy.io
        kind: Backend
        name: backend-4
        port: 3001
      matches:
      - path:
          value: /
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-5
    namespace: default
  spec:
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
    rules:
    - backendRefs:
      - group: gateway.envoyproxy.io
        kind: Backend
        name: backend-5
      matches:
      - path:
          value: /
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: 'Failed to process route rule 0 backendRef 0: must specify either
          CACertificateRefs or WellKnownCACertificates when InsecureSkipVerify is
          unset or false.'
        reason: InvalidBackendRef
        status: "False"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-6
    namespace: default
  spec:
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
    rules:
    - backendRefs:
      - group: gateway.envoyproxy.io
        kind: Backend
        name: backend-6
        port: 3001
      matches:
      - path:
          value: /
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: 'Failed to process route rule 0 backendRef 0: must specify either
          CACertificateRefs or WellKnownCACertificates when InsecureSkipVerify is
          unset or false.'
        reason: InvalidBackendRef
        status: "False"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-7-override-client-tls-settings
    namespace: envoy-gateway
  spec:
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
    rules:
    - backendRefs:
      - group: gateway.envoyproxy.io
        kind: Backend
        name: backend-7
        port: 3001
      matches:
      - path:
          value: /
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-8-gateway-backend-tls-precedence
    namespace: envoy-gateway
  spec:
    parentRefs:
    - name: gateway-2-with-backend-tls
      namespace: envoy-gateway
    rules:
    - backendRefs:
      - group: gateway.envoyproxy.io
        kind: Backend
        name: backend-8
        port: 3001
      matches:
      - path:
          value: /
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-2-with-backend-tls
        namespace: envoy-gateway
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-9-override-client-tls-settings-disable-alpn
    namespace: envoy-gateway
  spec:
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
    rules:
    - backendRefs:
      - group: gateway.envoyproxy.io
        kind: Backend
        name: backend-9
        port: 3001
      matches:
      - path:
          value: /
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-10-no-client-tls-settings
    namespace: envoy-gateway
  spec:
    parentRefs:
    - name: gateway-3-without-backend-tls
      namespace: envoy-gateway
    rules:
    - backendRefs:
      - group: gateway.envoyproxy.io
        kind: Backend
        name: backend-10
        port: 3001
      matches:
      - path:
          value: /
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-3-without-backend-tls
        namespace: envoy-gateway
infraIR:
  envoy-gateway/gateway-1:
    proxy:
      config:
        apiVersion: gateway.envoyproxy.io/v1alpha1
        kind: EnvoyProxy
        metadata:
          name: test
          namespace: envoy-gateway-system
        spec:
          backendTLS:
            alpnProtocols:
            - HTTP/1.1
            - HTTP/2
            ciphers:
            - ECDHE-RSA-AES128-GCM-SHA256
            - ECDHE-ECDSA-AES256-GCM-SHA384
            clientCertificateRef:
              group: ""
              kind: Secret
              name: client-auth
            ecdhCurves:
            - ECDHE-RSA-AES128-GCM-SHA256
            - ECDHE-ECDSA-AES256-GCM-SHA384
            maxVersion: tls1.3
            minVersion: tls1.2
            signatureAlgorithms:
            - RSA-PSS-RSAE-SHA256
            - ECDSA-SECP256R1-SHA256
          logging: {}
        status: {}
      listeners:
      - name: envoy-gateway/gateway-1/http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-1
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-1
      namespace: envoy-gateway-system
  envoy-gateway/gateway-2-with-backend-tls:
    proxy:
      config:
        apiVersion: gateway.envoyproxy.io/v1alpha1
        kind: EnvoyProxy
        metadata:
          name: test
          namespace: envoy-gateway-system
        spec:
          backendTLS:
            alpnProtocols:
            - HTTP/1.1
            - HTTP/2
            ciphers:
            - ECDHE-RSA-AES128-GCM-SHA256
            - ECDHE-ECDSA-AES256-GCM-SHA384
            clientCertificateRef:
              group: ""
              kind: Secret
              name: client-auth
            ecdhCurves:
            - ECDHE-RSA-AES128-GCM-SHA256
            - ECDHE-ECDSA-AES256-GCM-SHA384
            maxVersion: tls1.3
            minVersion: tls1.2
            signatureAlgorithms:
            - RSA-PSS-RSAE-SHA256
            - ECDSA-SECP256R1-SHA256
          logging: {}
        status: {}
      listeners:
      - name: envoy-gateway/gateway-2-with-backend-tls/http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-2-with-backend-tls
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-2-with-backend-tls
      namespace: envoy-gateway-system
  envoy-gateway/gateway-3-without-backend-tls:
    proxy:
      config:
        apiVersion: gateway.envoyproxy.io/v1alpha1
        kind: EnvoyProxy
        metadata:
          name: no-backend-tls
          namespace: envoy-gateway
        spec:
          logging: {}
        status:
          ancestors:
          - ancestorRef:
              group: gateway.networking.k8s.io
              kind: Gateway
              name: gateway-3-without-backend-tls
              namespace: envoy-gateway
            conditions:
            - lastTransitionTime: null
              message: EnvoyProxy has been accepted.
              reason: Accepted
              status: "True"
              type: Accepted
      listeners:
      - name: envoy-gateway/gateway-3-without-backend-tls/http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-3-without-backend-tls
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-3-without-backend-tls
      namespace: envoy-gateway-system
xdsIR:
  envoy-gateway/gateway-1:
    accessLog:
      json:
      - path: /dev/stdout
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-envoy-gateway-gateway-1-196ae069
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/gateway-1
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-envoy-gateway-gateway-1-196ae069
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: envoy-gateway/gateway-1
          protocol: TCP
    http:
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
      name: envoy-gateway/gateway-1/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
      routes:
      - destination:
          metadata:
            kind: HTTPRoute
            name: httproute-1
            namespace: default
          name: httproute/default/httproute-1/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 1.1.1.1
              port: 3001
            metadata:
              kind: Backend
              name: backend-1
              namespace: default
            name: httproute/default/httproute-1/rule/0/backend/0
            protocol: HTTP
            tls:
              alpnProtocols:
              - HTTP/1.1
              - HTTP/2
              caCertificate:
                name: system_ca_certificates
              ciphers:
              - ECDHE-RSA-AES128-GCM-SHA256
              - ECDHE-ECDSA-AES256-GCM-SHA384
              clientCertificates:
              - certificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKRENDQWd5Z0F3SUJBZ0lVU3JTYktMZjBiTEVHb2dXeC9nQ3cyR0N0dnhFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0V6RVJNQThHQTFVRUF3d0lWR1Z6ZENCSmJtTXdIaGNOTWpRd01qSTVNRGt6TURFd1doY05NelF3TWpJMgpNRGt6TURFd1dqQVRNUkV3RHdZRFZRUUREQWhVWlhOMElFbHVZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFECmdnRVBBRENDQVFvQ2dnRUJBSzFKempQSWlXZzNxb0hTckFkZGtlSmphTVA5aXlNVGkvQlBvOWNKUG9SRThaaTcKV2FwVXJYTC85QTlyK2pITXlHSVpOWk5kY1o1Y1kyWHYwTFA4WnhWeTJsazArM3d0WXpIbnBHWUdWdHlxMnRldAp [...]
                name: envoy-gateway-system/client-auth
                privateKey: '[redacted]'
              ecdhCurves:
              - ECDHE-RSA-AES128-GCM-SHA256
              - ECDHE-ECDSA-AES256-GCM-SHA384
              maxVersion: tls1.3
              minVersion: tls1.2
              signatureAlgorithms:
              - RSA-PSS-RSAE-SHA256
              - ECDSA-SECP256R1-SHA256
              sni: example.com
              subjectAltNames:
              - uri: spiffe://cluster.local/ns/istio-demo/sa/echo-v1
              - hostname: subdomain.secondexample.com
              useSystemTrustStore: true
            weight: 1
        hostname: '*'
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-1
          namespace: default
        name: httproute/default/httproute-1/rule/0/match/0/*
        pathMatch:
          distinct: false
          name: ""
          prefix: /
      - destination:
          metadata:
            kind: HTTPRoute
            name: httproute-2
            namespace: default
          name: httproute/default/httproute-2/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 2.2.2.2
              port: 3001
            metadata:
              kind: Backend
              name: backend-2
              namespace: default
            name: httproute/default/httproute-2/rule/0/backend/0
            protocol: HTTP
            tls:
              alpnProtocols:
              - HTTP/1.1
              - HTTP/2
              caCertificate:
                certificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lVQWw2VUtJdUttenRlODFjbGx6NVBmZE4ySWxJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0l6RVFNQTRHQTFVRUF3d0hiWGxqYVdWdWRERVBNQTBHQTFVRUNnd0dhM1ZpWldSaU1CNFhEVEl6TVRBdwpNakExTkRFMU4xb1hEVEkwTVRBd01UQTFOREUxTjFvd0l6RVFNQTRHQTFVRUF3d0hiWGxqYVdWdWRERVBNQTBHCkExVUVDZ3dHYTNWaVpXUmlNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXdTVGMKMXlqOEhXNjJueW5rRmJYbzRWWEt2MmpDMFBNN2RQVmt5ODdGd2VaY1RLTG9XUVZQUUUycDJrTERLNk9Fc3ptTQp [...]
                name: backend-2/default-ca
              ciphers:
              - ECDHE-RSA-AES128-GCM-SHA256
              - ECDHE-ECDSA-AES256-GCM-SHA384
              clientCertificates:
              - certificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKRENDQWd5Z0F3SUJBZ0lVU3JTYktMZjBiTEVHb2dXeC9nQ3cyR0N0dnhFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0V6RVJNQThHQTFVRUF3d0lWR1Z6ZENCSmJtTXdIaGNOTWpRd01qSTVNRGt6TURFd1doY05NelF3TWpJMgpNRGt6TURFd1dqQVRNUkV3RHdZRFZRUUREQWhVWlhOMElFbHVZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFECmdnRVBBRENDQVFvQ2dnRUJBSzFKempQSWlXZzNxb0hTckFkZGtlSmphTVA5aXlNVGkvQlBvOWNKUG9SRThaaTcKV2FwVXJYTC85QTlyK2pITXlHSVpOWk5kY1o1Y1kyWHYwTFA4WnhWeTJsazArM3d0WXpIbnBHWUdWdHlxMnRldAp [...]
                name: envoy-gateway-system/client-auth
                privateKey: '[redacted]'
              ecdhCurves:
              - ECDHE-RSA-AES128-GCM-SHA256
              - ECDHE-ECDSA-AES256-GCM-SHA384
              maxVersion: tls1.2
              minVersion: tls1.2
              signatureAlgorithms:
              - RSA-PSS-RSAE-SHA256
              - ECDSA-SECP256R1-SHA256
            weight: 1
        hostname: '*'
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-2
          namespace: default
        name: httproute/default/httproute-2/rule/0/match/0/*
        pathMatch:
          distinct: false
          name: ""
          prefix: /
      - destination:
          metadata:
            kind: HTTPRoute
            name: httproute-3
            namespace: default
          name: httproute/default/httproute-3/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 3.3.3.3
              port: 3001
            metadata:
              kind: Backend
              name: backend-3
              namespace: default
            name: httproute/default/httproute-3/rule/0/backend/0
            protocol: HTTP
            tls:
              alpnProtocols:
              - HTTP/1.1
              - HTTP/2
              caCertificate:
                name: system_ca_certificates
              ciphers:
              - ECDHE-RSA-AES128-GCM-SHA256
              - ECDHE-ECDSA-AES256-GCM-SHA384
              clientCertificates:
              - certificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKRENDQWd5Z0F3SUJBZ0lVU3JTYktMZjBiTEVHb2dXeC9nQ3cyR0N0dnhFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0V6RVJNQThHQTFVRUF3d0lWR1Z6ZENCSmJtTXdIaGNOTWpRd01qSTVNRGt6TURFd1doY05NelF3TWpJMgpNRGt6TURFd1dqQVRNUkV3RHdZRFZRUUREQWhVWlhOMElFbHVZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFECmdnRVBBRENDQVFvQ2dnRUJBSzFKempQSWlXZzNxb0hTckFkZGtlSmphTVA5aXlNVGkvQlBvOWNKUG9SRThaaTcKV2FwVXJYTC85QTlyK2pITXlHSVpOWk5kY1o1Y1kyWHYwTFA4WnhWeTJsazArM3d0WXpIbnBHWUdWdHlxMnRldAp [...]
                name: envoy-gateway-system/client-auth
                privateKey: '[redacted]'
              ecdhCurves:
              - ECDHE-RSA-AES128-GCM-SHA256
              - ECDHE-ECDSA-AES256-GCM-SHA384
              maxVersion: tls1.3
              minVersion: tls1.2
              signatureAlgorithms:
              - RSA-PSS-RSAE-SHA256
              - ECDSA-SECP256R1-SHA256
              sni: example.com
              useSystemTrustStore: true
            weight: 1
        hostname: '*'
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-3
          namespace: default
        name: httproute/default/httproute-3/rule/0/match/0/*
        pathMatch:
          distinct: false
          name: ""
          prefix: /
      - destination:
          metadata:
            kind: HTTPRoute
            name: httproute-4
            namespace: default
          name: httproute/default/httproute-4/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 3.3.3.3
              port: 3001
            metadata:
              kind: Backend
              name: backend-4
              namespace: default
            name: httproute/default/httproute-4/rule/0/backend/0
            protocol: HTTP
            tls:
              alpnProtocols:
              - HTTP/1.1
              - HTTP/2
              caCertificate:
                name: system_ca_certificates
              ciphers:
              - ECDHE-RSA-AES128-GCM-SHA256
              - ECDHE-ECDSA-AES256-GCM-SHA384
              clientCertificates:
              - certificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKRENDQWd5Z0F3SUJBZ0lVU3JTYktMZjBiTEVHb2dXeC9nQ3cyR0N0dnhFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0V6RVJNQThHQTFVRUF3d0lWR1Z6ZENCSmJtTXdIaGNOTWpRd01qSTVNRGt6TURFd1doY05NelF3TWpJMgpNRGt6TURFd1dqQVRNUkV3RHdZRFZRUUREQWhVWlhOMElFbHVZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFECmdnRVBBRENDQVFvQ2dnRUJBSzFKempQSWlXZzNxb0hTckFkZGtlSmphTVA5aXlNVGkvQlBvOWNKUG9SRThaaTcKV2FwVXJYTC85QTlyK2pITXlHSVpOWk5kY1o1Y1kyWHYwTFA4WnhWeTJsazArM3d0WXpIbnBHWUdWdHlxMnRldAp [...]
                name: envoy-gateway-system/client-auth
                privateKey: '[redacted]'
              ecdhCurves:
              - ECDHE-RSA-AES128-GCM-SHA256
              - ECDHE-ECDSA-AES256-GCM-SHA384
              maxVersion: tls1.3
              minVersion: tls1.2
              signatureAlgorithms:
              - RSA-PSS-RSAE-SHA256
              - ECDSA-SECP256R1-SHA256
              sni: example.com
              useSystemTrustStore: true
            weight: 1
        hostname: '*'
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-4
          namespace: default
        name: httproute/default/httproute-4/rule/0/match/0/*
        pathMatch:
          distinct: false
          name: ""
          prefix: /
      - directResponse:
          statusCode: 500
        hostname: '*'
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-5
          namespace: default
        name: httproute/default/httproute-5/rule/0/match/0/*
        pathMatch:
          distinct: false
          name: ""
          prefix: /
      - directResponse:
          statusCode: 500
        hostname: '*'
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-6
          namespace: default
        name: httproute/default/httproute-6/rule/0/match/0/*
        pathMatch:
          distinct: false
          name: ""
          prefix: /
      - destination:
          metadata:
            kind: HTTPRoute
            name: httproute-7-override-client-tls-settings
            namespace: envoy-gateway
          name: httproute/envoy-gateway/httproute-7-override-client-tls-settings/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 3.3.3.3
              port: 3001
            metadata:
              kind: Backend
              name: backend-7
              namespace: envoy-gateway
            name: httproute/envoy-gateway/httproute-7-override-client-tls-settings/rule/0/backend/0
            protocol: HTTP
            tls:
              alpnProtocols:
              - HTTP/2
              caCertificate:
                name: system_ca_certificates
              ciphers:
              - ECDHE-RSA-AES128-GCM-SHA256
              - ECDHE-ECDSA-AES256-GCM-SHA384
              clientCertificates:
              - certificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKRENDQWd5Z0F3SUJBZ0lVU3JTYktMZjBiTEVHb2dXeC9nQ3cyR0N0dnhFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0V6RVJNQThHQTFVRUF3d0lWR1Z6ZENCSmJtTXdIaGNOTWpRd01qSTVNRGt6TURFd1doY05NelF3TWpJMgpNRGt6TURFd1dqQVRNUkV3RHdZRFZRUUREQWhVWlhOMElFbHVZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFECmdnRVBBRENDQVFvQ2dnRUJBSzFKempQSWlXZzNxb0hTckFkZGtlSmphTVA5aXlNVGkvQlBvOWNKUG9SRThaaTcKV2FwVXJYTC85QTlyK2pITXlHSVpOWk5kY1o1Y1kyWHYwTFA4WnhWeTJsazArM3d0WXpIbnBHWUdWdHlxMnRldAp [...]
                name: envoy-gateway/client-auth-override
                privateKey: '[redacted]'
              ecdhCurves:
              - ECDHE-RSA-AES128-GCM-SHA256
              - ECDHE-ECDSA-AES256-GCM-SHA384
              maxVersion: tls1.3
              minVersion: tls1.2
              signatureAlgorithms:
              - RSA-PSS-RSAE-SHA256
              - ECDSA-SECP256R1-SHA256
              useSystemTrustStore: true
            weight: 1
        hostname: '*'
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-7-override-client-tls-settings
          namespace: envoy-gateway
        name: httproute/envoy-gateway/httproute-7-override-client-tls-settings/rule/0/match/0/*
        pathMatch:
          distinct: false
          name: ""
          prefix: /
      - destination:
          metadata:
            kind: HTTPRoute
            name: httproute-9-override-client-tls-settings-disable-alpn
            namespace: envoy-gateway
          name: httproute/envoy-gateway/httproute-9-override-client-tls-settings-disable-alpn/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 3.3.3.3
              port: 3001
            metadata:
              kind: Backend
              name: backend-9
              namespace: envoy-gateway
            name: httproute/envoy-gateway/httproute-9-override-client-tls-settings-disable-alpn/rule/0/backend/0
            protocol: HTTP
            tls:
              alpnProtocols: []
              caCertificate:
                name: system_ca_certificates
              ciphers:
              - ECDHE-RSA-AES128-GCM-SHA256
              - ECDHE-ECDSA-AES256-GCM-SHA384
              clientCertificates:
              - certificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKRENDQWd5Z0F3SUJBZ0lVU3JTYktMZjBiTEVHb2dXeC9nQ3cyR0N0dnhFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0V6RVJNQThHQTFVRUF3d0lWR1Z6ZENCSmJtTXdIaGNOTWpRd01qSTVNRGt6TURFd1doY05NelF3TWpJMgpNRGt6TURFd1dqQVRNUkV3RHdZRFZRUUREQWhVWlhOMElFbHVZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFECmdnRVBBRENDQVFvQ2dnRUJBSzFKempQSWlXZzNxb0hTckFkZGtlSmphTVA5aXlNVGkvQlBvOWNKUG9SRThaaTcKV2FwVXJYTC85QTlyK2pITXlHSVpOWk5kY1o1Y1kyWHYwTFA4WnhWeTJsazArM3d0WXpIbnBHWUdWdHlxMnRldAp [...]
                name: envoy-gateway/client-auth-override
                privateKey: '[redacted]'
              ecdhCurves:
              - ECDHE-RSA-AES128-GCM-SHA256
              - ECDHE-ECDSA-AES256-GCM-SHA384
              maxVersion: tls1.3
              minVersion: tls1.2
              signatureAlgorithms:
              - RSA-PSS-RSAE-SHA256
              - ECDSA-SECP256R1-SHA256
              useSystemTrustStore: true
            weight: 1
        hostname: '*'
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-9-override-client-tls-settings-disable-alpn
          namespace: envoy-gateway
        name: httproute/envoy-gateway/httproute-9-override-client-tls-settings-disable-alpn/rule/0/match/0/*
        pathMatch:
          distinct: false
          name: ""
          prefix: /
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
  envoy-gateway/gateway-2-with-backend-tls:
    accessLog:
      json:
      - path: /dev/stdout
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-envoy-gateway-gateway-2-with-backend-tls-be55577a
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/gateway-2-with-backend-tls
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-envoy-gateway-gateway-2-with-backend-tls-be55577a
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: envoy-gateway/gateway-2-with-backend-tls
          protocol: TCP
    http:
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: gateway-2-with-backend-tls
        namespace: envoy-gateway
        sectionName: http
      name: envoy-gateway/gateway-2-with-backend-tls/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
      routes:
      - destination:
          metadata:
            kind: HTTPRoute
            name: httproute-8-gateway-backend-tls-precedence
            namespace: envoy-gateway
          name: httproute/envoy-gateway/httproute-8-gateway-backend-tls-precedence/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 3.3.3.3
              port: 3001
            metadata:
              kind: Backend
              name: backend-8
              namespace: envoy-gateway
            name: httproute/envoy-gateway/httproute-8-gateway-backend-tls-precedence/rule/0/backend/0
            protocol: HTTP
            tls:
              alpnProtocols: null
              caCertificate:
                name: system_ca_certificates
              clientCertificates:
              - certificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKRENDQWd5Z0F3SUJBZ0lVU3JTYktMZjBiTEVHb2dXeC9nQ3cyR0N0dnhFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0V6RVJNQThHQTFVRUF3d0lWR1Z6ZENCSmJtTXdIaGNOTWpRd01qSTVNRGt6TURFd1doY05NelF3TWpJMgpNRGt6TURFd1dqQVRNUkV3RHdZRFZRUUREQWhVWlhOMElFbHVZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFECmdnRVBBRENDQVFvQ2dnRUJBSzFKempQSWlXZzNxb0hTckFkZGtlSmphTVA5aXlNVGkvQlBvOWNKUG9SRThaaTcKV2FwVXJYTC85QTlyK2pITXlHSVpOWk5kY1o1Y1kyWHYwTFA4WnhWeTJsazArM3d0WXpIbnBHWUdWdHlxMnRldAp [...]
                name: envoy-gateway/gateway-client-auth
                privateKey: '[redacted]'
              maxVersion: "1.3"
              minVersion: "1.2"
              sni: example.com
              subjectAltNames:
              - uri: spiffe://cluster.local/ns/istio-demo/sa/echo-v1
              - hostname: subdomain.secondexample.com
              useSystemTrustStore: true
            weight: 1
        hostname: '*'
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-8-gateway-backend-tls-precedence
          namespace: envoy-gateway
        name: httproute/envoy-gateway/httproute-8-gateway-backend-tls-precedence/rule/0/match/0/*
        pathMatch:
          distinct: false
          name: ""
          prefix: /
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
  envoy-gateway/gateway-3-without-backend-tls:
    accessLog:
      json:
      - path: /dev/stdout
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-envoy-gateway-gateway-3-without-backend-tls-ff391217
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/gateway-3-without-backend-tls
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-envoy-gateway-gateway-3-without-backend-tls-ff391217
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: envoy-gateway/gateway-3-without-backend-tls
          protocol: TCP
    http:
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: gateway-3-without-backend-tls
        namespace: envoy-gateway
        sectionName: http
      name: envoy-gateway/gateway-3-without-backend-tls/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
      routes:
      - destination:
          metadata:
            kind: HTTPRoute
            name: httproute-10-no-client-tls-settings
            namespace: envoy-gateway
          name: httproute/envoy-gateway/httproute-10-no-client-tls-settings/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 3.3.3.3
              port: 3001
            metadata:
              kind: Backend
              name: backend-10
              namespace: envoy-gateway
            name: httproute/envoy-gateway/httproute-10-no-client-tls-settings/rule/0/backend/0
            protocol: HTTP
            tls:
              alpnProtocols: null
              caCertificate:
                name: system_ca_certificates
              maxVersion: "1.3"
              minVersion: "1.2"
              useSystemTrustStore: true
            weight: 1
        hostname: '*'
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-10-no-client-tls-settings
          namespace: envoy-gateway
        name: httproute/envoy-gateway/httproute-10-no-client-tls-settings/rule/0/match/0/*
        pathMatch:
          distinct: false
          name: ""
          prefix: /
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
